# Practica4

./: .gitignore  CMakeLists.txt  Network.cpp  Network.h  README.md  Router.cpp  Router.h  auxiliares.cpp  auxiliares.h  codificar.cpp  codificar.h  decodificar.cpp  decodificar.h  main.cpp  registrousuarios.cpp  registrousuarios.h
